--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ brocoli = { git = "https://gitlab.com/ddorn/brocoli" }
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+gunicorn = {extras = ["eventlet"], version = "^20.0.4"}
 
 [build-system]
 requires = ["poetry>=0.12"]
