--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,10 @@ description = ""
 authors = ["ddorn <diego.dorn@free.fr>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-flask = "^1.1.2"
-brocoli = { git = "https://gitlab.com/ddorn/brocoli" }
-
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
-gunicorn = {extras = ["eventlet"], version = "^20.0.4"}
+python = "^3.7"
+flask = "^1.1.0"
+brocoli = { git = "https://gitlab.com/ddorn/brocoli", rev = "0.2.0"}
+gunicorn = {extras = ["eventlet"], version = "^20.0.0"}
 
 [build-system]
 requires = ["poetry>=0.12"]
