--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ gunicorn = {extras = ["eventlet"], version = "^20.0.0"}
 django = "^3.0.0"
 django-extensions = "^2.2.9"
 ptpython = "^3.0.2"
+django-colorfield = "^0.3.0"
 
 
 [tool.poetry.dev-dependencies]
